# gen_models

./: .gitignore  LICENSE  README.md  pyproject.toml
create_models/: __main__.py  _types.py  architecture.py  format.py
create_models/formats/: keras.py  onnx.py  tf.py  tf_onnx.py  torch.py  torch_onnx.py
create_models/model_weights/: common.py  conv2d.py  conv2d_linear.py  linear.py
